# jok_kur_rl_summative

./: .gitignore  README.md  main.py  pyproject.toml
api/: serve.py
environment/: custom_env.py  rendering.py
logs/: A2C_runs.csv  DQN_runs.csv  PPO_runs.csv  REINFORCE_runs.csv
models/pg/: best_reinforce.pt  reinforce_run1.pt  reinforce_run10.pt  reinforce_run2.pt  reinforce_run3.pt  reinforce_run4.pt  reinforce_run5.pt  reinforce_run6.pt  reinforce_run8.pt  reinforce_run9.pt
tests/: test_environment.py
training/: dqn_training.py  eval_utils.py  experiment_logger.py  pg_training.py
